# Kumir3

./: .gitignore  Cargo.toml  Kumir3.wit  README.md  TODO.md  codebook.toml  index.html  justfile  kumir_gui-568e903527479d91.js  kumir_gui-b62b32a032e36b0f.js  kumir_gui-dfc5a5d1f27492ad.js  kumir_gui-e3361f20909e659f.js  kumir_gui-e7d63beeed2830d3.js
.cargo/: config.toml
.github/workflows/: Build_web  main.yml
.sourcecraft/: sites.yml
add/: add.wasm  docs:adder@0.1.0.wasm  go.mod
add/wit/: world.wit
crates/kumir_gui/: Cargo.toml  Trunk.toml  index.html
crates/kumir_gui/src/: app.rs  app_state.rs  gruvbox_egui.rs  gui.rs  kumir_state.rs  main.rs  runtime_requirements.rs
crates/kumir_gui/src/executors/: mod.rs  robot.rs
crates/kumir_gui/src/executors/doc/: ActorComplexnumbers.md  ActorDraw.md  ActorGrasshopper.md  ActorIsometricRobot.md  ActorKeyboard.md  ActorPainter.md  ActorRobot.md  ActorTurtle.md  ActorVodoley.md
crates/kumir_gui/src/executors/gui/: mod.rs
crates/kumir_gui/src/rustpy/: run.rs
crates/kumir_gui/src/styles/: default_dark.rs
crates/kumir_gui/src/widgets/: docs.rs  mod.rs  panes.rs  robot_gui.rs  terminal.rs  usage_diagnostics.rs
crates/kumir_gui_docs/: Cargo.toml
crates/kumir_gui_docs/src/: lib.rs
crates/kumir_gui_docs_macros/: Cargo.toml
crates/kumir_gui_docs_macros/src/: lib.rs
crates/kumir_lang/: Cargo.toml
crates/kumir_lang/src/: ast.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  test.kum  test2.kum  test3.kum
crates/kumir_runtime/: Cargo.toml
crates/kumir_runtime/src/: console_runtime_requirements.rs  dummy.rs  kumir_lang_runtime.rs  lib.rs  main.rs  python_runtime.rs  test.kum
src/: app.rs  egui_tools.rs  gui.rs  main.rs
src/executors/: mod.rs
userdocs/: convert.py  robot.md
userdocs/.obsidian/: workspace.json
userdocs/md_output/: ActorComplexnumbers.md  ActorDraw.md  ActorFiles.md  ActorGrasshopper.md  ActorIsometricRobot.md  ActorKeyboard.md  ActorPainter.md  ActorRobot.md  ActorStringUtils.md  ActorTurtle.md  ActorVodoley.md  builtin-actors-highgrade.md  buttons.md  classic.md  compound_commands.md  cources.md  editor.md  files.md  highgrade.md  indentifiers.md  index-classic.md  index-highgrade.md  index-ide.md  index-macx.md  index-python.md  index-teacher.md  lexical_cast.md  math.md  menu.md  overview-with-tabs.md  overview-without-tabs.md  run.md  secondarywindows.md  session.md  short_man.md  simple_commands.md  simple_string.md  standard_library-classic.md  standard_library-highgrade.md  stringutils.md  (+5 more)
userdocs/md_output/language/: ActorFiles.md  ActorStringUtils.md  builtin-actors-highgrade.md  compound_commands.md  index-highgrade.md  simple_commands.md  structure.md
userdocs/md_output/system/: index-highgrade.md
userdocs/md_output/system/intro/: classic.md  highgrade.md  teacher.md
userdocs/md_output/system/mainwindow/: with-tabs.md
userdocs/userdocs_old_xml/: ActorTurtle.xml
