[package]
name = "kumir_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "*"
egui = { version = "0.31.1" }
egui_extras = { version = "0.31.1", features = ["syntect"] }
egui-wgpu = { version = "0.31.1", features = ["winit"] }
egui-winit = { version = "0.31.1", default-features = false }
egui_tiles = "0.12.0"
egui_console = "0.2.0"
rustpython = "*"
rustpython-vm = "*"

winit = "0.30.9"
wasm_thread = "*"
log = { workspace = true }
vello = "0.5.0"
anyhow = "1.0.98"
web-time = { version = "1.1.0" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_log = { version = "*", features = ["color"] }
wasm-bindgen = { version = "*" }
wasm-bindgen-futures = "*"
web-sys = { version = "0.3.77", features = [
    'Window',
    'Document',
    'HtmlElement',
    'Navigator',
    'Gpu',
] }

[target.'cfg(unix)'.dependencies]
tracy_full = { version = "1.12.0", features = ["enable", "wgpu"] }

[profile.dev]
opt-level = 0
[profile.dev.package."*"]
opt-level = 3
