[package]
name = "kumir_gui"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "24.0.5"

#Egui stuff
egui = { workspace = true }
egui_extras = { version = "0.31.1", features = ["syntect"] }
egui-wgpu = { version = "0.31.1", features = ["winit"] }
egui-winit = { version = "0.31.1", default-features = false }
egui_tiles = "0.12.0"
egui_commonmark = {workspace = true}

kumir_runtime = { workspace = true }
kumir_gui_docs_macros = {workspace = true }

winit = "0.30.9"
wasm_thread = {workspace=true}
log = { workspace = true }
vello = "0.5.1"
anyhow = "1.0.98"
web-time = { version = "1.1.0" }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = { version = "*", features = ["color"] }
wasm-bindgen = { version = "*" }
wasm-bindgen-futures = "*"
getrandom = { version = "0.3.3", features = ["wasm_js"] }
web-sys = { version = "0.3.77", features = [
    'Window',
    'Document',
    'HtmlElement',
    'Navigator',
    'Gpu',
] }
[target.'cfg(unix)'.dependencies]
tracy_full = { version = "1.12.0", features = ["enable", "wgpu"] }

[profile.dev]
opt-level = 0
[profile.dev.package."*"]
opt-level = 3
